k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: honarino-ingress
    namespace: honarino
spec:
    rules:
        - host:
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 3000
                  - path: /api/
                    pathType: Prefix
                    backend:
                        service:
                            name: api
                            port:
                                number: 8000
                  - path: /uploads/
                    pathType: Prefix
                    backend:
                        service:
                            name: minio
                            port:
                                number: 9000
                  - path: /argocd/
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server
                            port:
                                number: 443
